Change menu icon & Add fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">corona_tracker</string>
+    <string name="Countries">Countries</string>
+    <string name="MyCountry">My country</string>
+    <string name="Volunteer">Volunteer</string>
+    <string name="Protection">Protection</string>
 </resources>
