--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="Protection" translatable="false">Protection</string>
     <string name="editehint" translatable="false">type your request  ….</string>
     <string name="Sendbutton" translatable="false">Send</string>
+    <string name="starbutton" translatable="false">Start</string>
     <string name="tv1" translatable="false">شد دارك</string>
     <string name="tv2" translatable="false">ما نسلموش على بعضنا و ما نسلموش في بعضنا و أقسم مع جارك و عاونو كان يحتاجك لكلنا يد وحدة نحميو رواحنا و صغارنا و ناس الي نحبوهم</string>
     <string name="tv3" translatable="false">#شد دارك و احمي صغارك</string>
