fix string values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">corona_tracker</string>
+    <string name="app_name">corona tracker</string>
     <string name="Countries">Countries</string>
     <string name="MyCountry">My country</string>
     <string name="Volunteer">Volunteer</string>
