--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -22,4 +22,14 @@
     <string name="c_death">Décès :</string>
     <string name="c_recovered">Récupéré:</string>
     <string name="c_certival">vertical:</string>
+    <string name="editehint">tapez</string>
+    <string name="Sendbutton">envoyer</string>
+    <string name="hello_blank_fragment">bonjour</string>
+    <string name="todo">Tod</string>
+    <string name="nbcases_cntry">222,111,000</string>
+    <string name="nb_active_cntry">222,111,000</string>
+    <string name="nb_death_cntry">1,200,300</string>
+    <string name="recovred_cntry">35,111,000</string>
+    <string name="certical_cntry">211,000</string>
+    <string name="start">start</string>
 </resources>
